Bug 246532 - The list of emails in kmail-mobile topmost shows a wrong email
Summary: The list of emails in kmail-mobile topmost shows a wrong email
Status: VERIFIED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: HI major
Target Milestone: ---
Assignee: Stephen Kelly
URL:
Keywords:
: 251066 (view as bug list)
Depends on:
Blocks: 246519
  Show dependency treegraph
 
Reported: 2010-08-02 18:26 UTC by Bernhard E. Reiter
Modified: 2011-01-19 11:29 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Wrong email list (35.56 KB, image/png)
2010-09-10 09:25 UTC, Bjoern Ricks
Details
Correct email list (31.50 KB, image/png)
2010-09-10 09:34 UTC, Bjoern Ricks
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard E. Reiter 2010-08-02 18:26:34 UTC
Version:           unspecified
OS:                other

The topmost email shown for kmail-mobile on n900 tag build 20100730-1
is wrong, e.g. it is from 2008, when on top should be the latest emails
from 2010-01 2010-08 and so on.

Reproducible: Always
Comment 1 Bernhard E. Reiter 2010-08-24 17:01:32 UTC
Still problems with 20100813-2.
Comment 2 Stephen Kelly 2010-08-25 11:36:04 UTC
SVN commit 1167780 by skelly:

Make use of the KResettingProxyModel, this time for a different QML bug.

BUG: 246532
BUG: 246893

 M  +6 -2      kdeclarativemainview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1167780
Comment 3 Bernhard E. Reiter 2010-08-31 09:55:21 UTC
Cannot reproduce anymore with 
N900 kdepim-mobile         4:4.5~20100827.1168757-1maemo1.1169941
libqt4-experimental-gui    4.7.0~git20100824-0maemo1
Comment 4 Bjoern Ricks 2010-09-10 09:24:10 UTC
Occurs again in 4:4.5~20100903.1171290-1maemo1.1171237.

First mail in a email list is sometimes not displayed correctly. Clicking on the wrong first mail shows the correct mail and afterwards the email list is displayed correctly.

Restarting kmail-mobile results in displaying the wrong first mail again.
Comment 5 Bjoern Ricks 2010-09-10 09:25:02 UTC
Created attachment 51501 [details]
Wrong email list
Comment 6 Bjoern Ricks 2010-09-10 09:34:56 UTC
Created attachment 51504 [details]
Correct email list
Comment 7 Stephen Kelly 2010-09-13 09:33:53 UTC
SVN commit 1174675 by skelly:

Layer another nasty hack on top of the KResettingProxyModel.

The d->mListModel needs to be reset when sorting (until Qt 4.7.1) but
we can't put the resetting model between it and QML because that doesn't
bode well with KAB. Hopefully this fix is reliable anyway until then...

BUG: 246532

 M  +1 -0      kdeclarativemainview.cpp  
 M  +3 -0      kresettingproxymodel.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1174675
Comment 8 Volker Krause 2010-09-13 13:11:16 UTC
*** Bug 251066 has been marked as a duplicate of this bug. ***
Comment 9 Felix Wolfsteller 2010-09-17 18:22:16 UTC
Confirming nasty hack with 4:4.5~20100917.1176264-1maemo1.1174921 . Closing.
Comment 10 Bernhard E. Reiter 2010-09-20 09:10:09 UTC
I can still see the issue on the first opening of a new folder.
The second time I open the folder, the topmost email is shown 
with the correct data.

With:
Package: kdepim-mobile
Version: 4:4.5~20100917.1176295-1maemo1.1174921
Package: libqt4-experimental-gui
Version: 4.7.0~git20100908-0maemo1

I kept my configuration during the update.
Comment 11 Bjoern Ricks 2010-09-21 15:12:07 UTC
Can confirm that this issue still occurs
Comment 12 Bernhard E. Reiter 2010-10-26 14:18:50 UTC
The default search order uses groups now, in the reverse order,
and the last email seems to be correctly shown.

Package: kdepim-mobile
Version: 4:4.6~20101025.1189542-1maemo2.1188357
Package: libqt4-experimental-gui
Version: 4.7.0~git20100908-0maemo1
Comment 13 Tobias Koenig 2010-11-27 14:33:59 UTC
So can this bug be closed? I haven't seen this behaviour lately when testing kmail-mobile on desktop.