Make use of the KResettingProxyModel, this time for a different QML bug.

BUG: 246532
BUG: 246893

svn path=/trunk/KDE/kdepim/mobile/; revision=1167780